chore: version pins

--- a/conda-recipe/meta.yaml
+++ b/conda-recipe/meta.yaml
@@ -33,26 +33,30 @@ requirements:
     - setuptools
 
   run:
-    - python>=3.11
+    - python<=3.11
     - pip
-    - pytorch
-    - tensorboard
-    - tifffile
-    - h5py
-    - zarr
-    - vigra
-    - python-elf
-    - python-graphviz
-    - scikit-image
-    - bioimageio.core>=0.9.0
-    - bioimageio.spec>=0.5.4.3
-    - qtpy
-    - pyside6
-    - napari
-    - qt-material
-    - requests
-    - pyyaml
-    - pydantic>2
+    # Neural Network
+    - pytorch<=2.9
+    - tensorboard<=2.20
+    # Bioimage and CV
+    - tifffile<=2025.12
+    - h5py<=3.15
+    - zarr<=3.1
+    - vigra<=1.12
+    - python-elf<=0.7
+    - python-graphviz<=0.21
+    - scikit-image<=0.25
+    - bioimageio.core<=0.9.5
+    - bioimageio.spec<=0.5.6
+    # GUI
+    - qtpy<=2.4
+    - pyside6<=6.10
+    - napari<=0.6
+    - qt-material<=2.14
+    # Other
+    - requests<=2.32
+    - pyyaml<=6.0
+    - pydantic<=2.11
 
 test:
   imports:
