chore: pin versions

--- a/conda-recipe/meta.yaml
+++ b/conda-recipe/meta.yaml
@@ -1,3 +1,4 @@
+{% set python_min = "3.11" %}
 package:
   name: panseg
   version: "2.0.0rc10"
@@ -28,41 +29,45 @@ build:
     - panseg = panseg.run_panseg:main
 
 requirements:
-  build:
-    - python>=3.11
+  host:
+    - python {{ python_min }}
     - setuptools
 
   run:
-    - python<=3.11
+    - python >={{ python_min }}
     - pip
     # Neural Network
-    - pytorch<=2.9
-    - tensorboard<=2.20
+    - pytorch==2.9.1
+    - tensorboard==2.20.0
     # Bioimage and CV
-    - tifffile<=2025.12
-    - h5py<=3.15
-    - zarr<=3.1
-    - vigra<=1.12
-    - python-elf<=0.7
-    - python-graphviz<=0.21
-    - scikit-image<=0.25
-    - bioimageio.core<=0.9.5
-    - bioimageio.spec<=0.5.6
+    - tifffile==2025.12.12
+    - h5py==3.15.1
+    - zarr==3.1.5
+    - vigra==1.12.2
+    - python-elf==0.7.3
+    - python-graphviz==0.21
+    - scikit-image==0.25.2
+    - bioimageio.core==0.9.5
+    - bioimageio.spec==0.5.6.0
     # GUI
-    - qtpy<=2.4
-    - pyside6<=6.10
-    - napari<=0.6
-    - qt-material<=2.14
+    - qtpy==2.4.3
+    - pyside6==6.10.1
+    - napari==0.6.6
+    - qt-material==2.14
     # Other
-    - requests<=2.32
-    - pyyaml<=6.0
-    - pydantic<=2.11
+    - requests==2.32.5
+    - pyyaml==6.0.3
+    - pydantic==2.11.10
 
 test:
   imports:
     - panseg
   requires:
+    - python {{ python_min }}
     - pytest
+    - pytest-qt
+    - pytest-mock
+    - requests-mock
   run:
     - pytest
 
